--- a/CursoAngular11/src/index.html
+++ b/CursoAngular11/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- app-root se encarga de inyectar nuestros componentes -->
   <app-root></app-root>
 </body>
 </html>
