--- a/CursoAngular11/src/index.html
+++ b/CursoAngular11/src/index.html
@@ -6,9 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- mapas nativos de google añadir libreria npm install @types/googlemaps@3.39.12-->
+  <script src="http://maps.googleapis.com/maps/api/js?Key=...&libraries=places,directions"></script>
 </head>
 <body>
   <!-- app-root se encarga de inyectar nuestros componentes -->
   <app-root></app-root>
+
 </body>
 </html>
